--- a/views/main/product-detail.pug
+++ b/views/main/product-detail.pug
@@ -46,13 +46,13 @@ block content
                             .col-lg-7.pe-lg-0
                                 .product-gallery
                                     .product-gallery-preview.order-sm-2
-                                        - for(let i = 0; i < product.images.length; i++)
-                                            .product-gallery-preview-item.active(id=imgIds[i])
+                                        - for(let i = 0; i < product.images.length; i++)  
+                                            .product-gallery-preview-item(id=imgIds[i] class=`${i === 0 ? 'active' : ''}`)
                                                 img.image-zoom(src=product.images[i] data-zoom=product.images[i] alt=product.title)
                                                 .image-zoom-pane
                                     .product-gallery-thumblist.order-sm-1
                                         - for(let i = 0; i < product.images.length; i++)
-                                            a.product-gallery-thumblist-item(href=`#${imgIds[i]}`)
+                                            a.product-gallery-thumblist-item(href=`#${imgIds[i]}` class=`${i === 0 ? 'active' : ''}`)
                                                 img(src=product.images[i] alt='Product thumb')
                                         
                             // Product details
