--- a/views/dashboard/editProduct.pug
+++ b/views/dashboard/editProduct.pug
@@ -56,6 +56,9 @@ block content
                             .mb-3
                                 label.form-label(for='description') Product description
                                 textarea#description.editable.form-control(rows='10000')= product.description
+                            .mb-3
+                                label.form-label(for='specs') Product Specs
+                                textarea#specs.editable.form-control(rows='10000')= product.specs
                                 //- .bg-secondary.p-3.fs-ms.rounded-bottom
                                 //-     span.d-inline-block.fw-medium.me-2.my-1 Markdown supported:
                                 //-     em.d-inline-block.border-end.pe-2.me-2.my-1 *Italic*
