--- a/views/dashboard/add-product.pug
+++ b/views/dashboard/add-product.pug
@@ -48,6 +48,9 @@ block content
                             .mb-3.py-2
                                 label.form-label(for='description') Product description
                                 textarea#description.editable.form-control(rows='2250')
+                            .mb-3.py-2
+                                label.form-label(for='specs') Product Specs
+                                textarea#specs.editable.form-control(rows='2250')
                                 //- .bg-secondary.p-3.fs-ms.rounded-bottom
                                 //-     span.d-inline-block.fw-medium.me-2.my-1 Markdown supported:
                                 //-     em.d-inline-block.border-end.pe-2.me-2.my-1 *Italic*
