--- a/views/main/index.pug
+++ b/views/main/index.pug
@@ -143,12 +143,12 @@ block content
         section.container.pt-5
         section.container.pt-5
         section.container.pt-5
-        .container
-            .row
-                .col-xs-6
-                    img(src='/assets/theme/img/shop/departments/07.jpg' alt='Card image top')
-                    img(src='/assets/theme/img/shop/departments/003.jpg' alt='Card image top')
-                    img(src='/assets/theme/img/shop/departments/001.jpg' alt='Card image top')
+        //- .container
+        //-     .row
+        //-         .col-xs-6
+        //-             img(src='/assets/theme/img/shop/departments/07.jpg' alt='Card image top')
+        //-             img(src='/assets/theme/img/shop/departments/003.jpg' alt='Card image top')
+        //-             img(src='/assets/theme/img/shop/departments/001.jpg' alt='Card image top')
         section.container.pt-5
         section.bg-size-cover.bg-position-center.pt-5.pb-4.pb-lg-5
             section.container.pt-5
@@ -179,7 +179,7 @@ block content
                                 button(type='button')
                                     i.ci-arrow-right
                         a.d-none.d-md-block.mt-auto(href='shop-grid-ls.html')
-                            img.d-block.w-100(src='/assets/theme/img/shop/departments/002.jpg' alt='Headphones')
+                            img.d-block.w-100(src='/assets/theme/img/shop/departments/headphones-03.jpg' alt='Headphones')
                 // Product grid (carousel)
                 .col-md-7.pt-4.pt-md-0
                     .tns-carousel
