--- a/views/dashboard/base.pug
+++ b/views/dashboard/base.pug
@@ -53,5 +53,7 @@ body.body.handheld-toolbar-enabled
     script(type="module" src='/js/dashboard/products.js')
     script(type="module" src='/js/dashboard/shipping.js')
     script(type="module" src="/js/dashboard/order.js") 
+    //- script(type="module" src="/js/dashboard/bundle/index.js") 
+
 
 
