--- a/views/main/_footer.pug
+++ b/views/main/_footer.pug
@@ -57,11 +57,11 @@ footer.footer.pt-5(style='background-color: #c7622b;')
                 .widget.pb-2.mb-4
                     .col-md-6.text-center.text-md-end.mb-4
                         .mb-3
-                            a.btn-social.bs-light.bs-twitter.ms-2.mb-2(href='#')
+                            a.btn-social.bs-light.bs-twitter.ms-2.mb-2(href='twitter.com/audiophilegh')
                                 i.ci-twitter
-                            a.btn-social.bs-light.bs-facebook.ms-2.mb-2(href='#')
+                            a.btn-social.bs-light.bs-facebook.ms-2.mb-2(href='facebook.com/audiophilegh')
                                 i.ci-facebook
-                            a.btn-social.bs-light.bs-instagram.ms-2.mb-2(href='#')
+                            a.btn-social.bs-light.bs-instagram.ms-2.mb-2(href='https://instagram.com/audiophilegh?igshid=YmMyMTA2M2Y=')
                                 i.ci-instagram
         // </div>
         // <div class="pt-5 bg-darker">
@@ -130,5 +130,6 @@ script(type="module" src='/js/main/checkout.js')
 script(type="module" src='/js/main/cart.js')
 script(src='/js/main/search.js')
 script(src="/js/main/renderHTML.js")
+//- script(type="module" src="/js/main/bundle/index.js") 
 
 
